--- a/products/templates/index.html
+++ b/products/templates/index.html
@@ -245,7 +245,7 @@
                 <li><a href="/logout">Log out</a></li>
                 {% endif %}
                 <li><a href="/about-us">About</a></li>
-				<li><a href="http://127.0.0.1:5000">Chat AI</a></li>
+				<li><a href="https://chatai-savorasia.onrender.com">Chat AI</a></li>
 
 			
             </ul>
