--- a/chatpot/Chatbot/templates/index.html
+++ b/chatpot/Chatbot/templates/index.html
@@ -7,25 +7,27 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 
   <link rel="stylesheet" href="{{ url_for('static', filename='styles/style.css') }}">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 
-<body style="background: url(static/2.jpg)";>
-  <a href=" http://127.0.0.1:8000/" class="btn btn-success">BACK TO DASHBOARD</a>
+<body style="background: url(static/2.jpg)" ;>
+  <a href=" https://ravd.onrender.com/" class="btn btn-success">BACK TO DASHBOARD</a>
   <!-- partial:index.partial.html -->
   <section class="msger">
     <header class="msger-header">
       <div class="msger-header-title">
-        Grocery Store Chatbot 
+        Grocery Store Chatbot
       </div>
     </header>
 
     <main class="msger-chat">
       <div class="msg left-msg">
-        <div class="msg-img" style="background-image: url(https://image.flaticon.com/icons/svg/327/327779.svg); background-repeat: no-repeat; background-size: cover;"></div>
+        <div class="msg-img"
+          style="background-image: url(https://image.flaticon.com/icons/svg/327/327779.svg); background-repeat: no-repeat; background-size: cover;">
+        </div>
 
 
         <div class="msg-bubble">
